# Pixelsona

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
